--- a/.cloudbees/workflows/deploy.yaml
+++ b/.cloudbees/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: cloudbees-io/checkout@v1
         with:
-          repository: TARGET_ORG/PROJECT_NAME-auth
+          repository: cb-golden-demo-org/sko-hackers-auth
       - uses: cloudbees-days/setup-kubeconfig
         name: Set kubeconfig
         with:
@@ -31,12 +31,12 @@ jobs:
         uses: cloudbees-io/helm-install@v1
         with:
           chart-location: ${{ cloudbees.workspace }}/chart
-          release-name: PROJECT_NAME-auth
+          release-name: sko-hackers-auth
           namespace: ${{ vars.namespace }}
           values: |
             image:
               url: ${{ inputs.artifact-url }}
-            hostname: PROJECT_NAME-auth.${{ inputs.environment }}.preview.cb-demos.io
+            hostname: sko-hackers-auth.${{ inputs.environment }}.preview.cb-demos.io
       - name: Register deployed artifact
         uses: cloudbees-io/register-deployed-artifact@v2
         with:
@@ -46,7 +46,7 @@ jobs:
         with:
           content: |-
             ## Deployed environment
-            [Dev frontend](https://PROJECT_NAME-auth.${{ inputs.environment }}.preview.cb-demos.io/)
+            [Dev frontend](https://sko-hackers-auth.${{ inputs.environment }}.preview.cb-demos.io/)
 
             Running ${{ inputs.artifact-url }}
           format: MARKDOWN
